[project]
name = "stripe-agents-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn[standard]>=0.29.0",
    "openai-agents>=0.0.14",
    "stripe>=12.1.0",
    "stripe-agent-toolkit>=0.6.1",
]
